kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: startup-tenant-alpha
    labels :
       environment: dev
