kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mock-ekyc-api
  namespace: startup-tenant-alpha

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: mock-ekyc-api

  template:
    metadata:
      labels:
        app: mock-ekyc-api

    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000

      containers:
      - name: mock-ekyc-api
        image: nagendrasai2026/mock-ekyc-api:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
