kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mock-ekyc-service
  namespace: startup-tenant-alpha

spec:
  selector:
    app: mock-ekyc-api

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: ClusterIP
